2006.09.30: David Nichols
	* changed all StringList classes to be based on STL container 
	  functionality
	* added detection of "slist" container support

2006.09.29: David Nichols
	* implemented makeHexString() and parseHexString() functions to generate
	  hex strings from binary data and vice-versa
	* implemented support for directly specifying binary constant values in
	  the scanner using a hex format surrounded by angle brackets 
	  (ex: <34bef4>)
	* fixed a bug in the chomp operator when chomping a newline at the 
	  beginning of the string
	* fixed a bug in the Queue class; a timeout in ::get() or ::pop() would
	  cause a deadlock on the next call to ::get() or ::pop()
	* throw an exception when fork() is called and more than one thread is 
          running
	* changes to use std::map when hash_map not available

2006.09.28: David Nichols
	* fixed broken ncurses module, made calls to initscr() optional
	* added the hstat() and hlstat() functions to return a hash of the 
	  result of stat() and lstat(), respectively

2006.09.28: Pavel Vozenilek
	* authentification_required_by_Tuxedo renamed to tpchkauth().
	* Finished Tuxedo::Connection class

2006.09.27: David Nichols
	* updated version number to 0.6.0
	* added bea tuxedo checks to configure

2006.09.26: Pavel Vozenilek
	* Module name is now Tuxedo.qmod.
	* Tuxedo module: added standalone function 
	  authentification_required_by_Tuxedo().
        * TuxedoModule: added Tuxedo::Connection class (initial version).

*** v0.5.2 *** RELEASE

2006.09.26: David Nichols
	* removed getSSLCertVerficationCodeString() function and changed
	  Socket::verifyPeerCertificate() and FtpClient::verifyPeerCertificate()
	  to directly return the string code instead of a numeric code.
	* bug fixes to test/socket-test.q
	* doc updates
	* fixed a bug in QoreTibrvTransport.cc
	* fixed a bug in ssl_constants.h on g++32

2006.09.25: David Nichols
	* fixed feature name registration for automatically-loaded modules